[tool.poetry]
name = "supergraph"
version = "0.0.8"
license = "Apache2.0"
description = "Supergraph compiler"
authors = ["bheijden  <b.heijden@hotmail.com>"]
#authors = ["Bas van der Heijden <d.s.vanderheijden@tudelft.nl>"]
#homepage = "https://github.com/bheijden/supergraph"
#repository = "https://github.com/bheijden/supergraph"
#documentation = "https://github.com/bheijden/supergraph"

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.1.0"
numpy = "^1.24.3"
tqdm = "^4.65.0"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
# https://python-poetry.org/docs/pyproject/#extras
# poetry install --all-extras or poetry install -E paper or poetry install --all-extras or poetry install --extras "paper"
wandb = { version = "^0.15.4", optional = true }
seaborn = { version = "^0.12.2", optional = true }
matplotlib = { version = "^3.7.1", optional = true }
dill = { version = "^0.3.7", optional = true }
pandas = { version = "^2.0.3", optional = true }
jupyter = { version = "^1.0.0", optional = true }
jupyterlab = { version = "^4.0.3", optional = true }
ipywidgets = { version = "^8.0.7", optional = true }
#jupyter = "^1.0.0"
#jupyterlab = "^4.0.3"
#ipywidgets = "^8.0.7"
#jax = { version = "0.4.13", optional = true }
#flax = { version = "0.7.2", optional = true }
#tensorflow-probability = { version = "0.21.0", optional = true }
#brax = { version = "0.9.4", optional = true }

[tool.poetry.extras]
paper = ["matplotlib", "seaborn"]#, "jax", "flax", "tensorflow-probability", "brax"]
experiments = ["wandb", "matplotlib", "jupyter", "jupyterlab", "ipywidgets", "dill", "pandas"]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0"
pytest-cov = "^3.0.0"
flake8 = ">=3"
flake8-bugbear = "^22.3.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "supergraph/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
